fix SonarCloud vulnerability